@@ -1,8 +1,8 @@
 # cmsc414buildit
 Potential attacks: 
 Man in the middle (Impersonating client/server maybe?)
-    Repeat attacks (Listening to and repeating old messages to make an effect happen)
-    Eavesdropping (Listening and understanding communications)
+Repeat attacks (Listening to and repeating old messages to make an effect happen)
+Eavesdropping (Listening and understanding communications)
 Buffer overflows (giving atm lots of input that is bad input)
 Denial of Service (not failing server when it gets a bad input)
 Password guessing attack 
@@ -11,5 +11,5 @@ File name attacks
 :D
 OwO
 
-Known bug: on "card file already exists" or "card file does not exist", bank crashes. 
-Known bug: on "account for deposit does not exist", bank crashes
+FIXED Known bug: on "card file already exists" or "card file does not exist", bank crashes. 
+FIXED Known bug: on "account for deposit does not exist", bank crashes
