@@ -7,3 +7,5 @@
 2:18am (fml) 12/8 Matthew - Converting string to ull for account balance and adding some int-overflow countermeasures. 
     Create, deposit, and withdraw updated (withdraw still untested i gotta go to bed man D:). 
     Basic functionality works but I can make it better (decimals are messed up rn)
+11:45pm 12/10 Clark- Did the arg parsing fixes and started the repeat attack protection
+4:23pm 12/11 Clark- Finished repeat attack protection.
